Update check_parquet notebook for merged OD data

--- a/check_parquet.ipynb
+++ b/check_parquet.ipynb
@@ -203,7 +203,229 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "file_path = r\"/Users/banghyewon/Desktop/dynamic_wirye_drt/data/processed/420_540_trip_both_sequential.parquet\"\n",
+    "file_path = r\"/Users/banghyewon/Desktop/dynamic_wirye_drt/data/processed/240307_wirye_od.parquet\"\n",
+    "\n",
+    "df = pd.read_parquet(file_path)\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1e8738c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>KEY1</th>\n",
+       "      <th>출발_x</th>\n",
+       "      <th>출발_y</th>\n",
+       "      <th>도착_x</th>\n",
+       "      <th>도착_y</th>\n",
+       "      <th>승차_timestamp</th>\n",
+       "      <th>하차_timestamp</th>\n",
+       "      <th>이용거리</th>\n",
+       "      <th>source</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>127.140050</td>\n",
+       "      <td>37.443500</td>\n",
+       "      <td>127.129830</td>\n",
+       "      <td>37.440480</td>\n",
+       "      <td>35116</td>\n",
+       "      <td>35512</td>\n",
+       "      <td>970.0</td>\n",
+       "      <td>smartcard</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>127.156721</td>\n",
+       "      <td>37.445073</td>\n",
+       "      <td>127.147540</td>\n",
+       "      <td>37.440946</td>\n",
+       "      <td>33180</td>\n",
+       "      <td>33511</td>\n",
+       "      <td>800.0</td>\n",
+       "      <td>smartcard</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>127.095050</td>\n",
+       "      <td>37.411250</td>\n",
+       "      <td>127.140220</td>\n",
+       "      <td>37.443280</td>\n",
+       "      <td>34378</td>\n",
+       "      <td>35636</td>\n",
+       "      <td>7248.0</td>\n",
+       "      <td>smartcard</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>127.165930</td>\n",
+       "      <td>37.460470</td>\n",
+       "      <td>127.134370</td>\n",
+       "      <td>37.441830</td>\n",
+       "      <td>36324</td>\n",
+       "      <td>37522</td>\n",
+       "      <td>4431.0</td>\n",
+       "      <td>smartcard</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>127.137600</td>\n",
+       "      <td>37.447020</td>\n",
+       "      <td>127.140940</td>\n",
+       "      <td>37.473750</td>\n",
+       "      <td>32360</td>\n",
+       "      <td>33673</td>\n",
+       "      <td>4068.0</td>\n",
+       "      <td>smartcard</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8088</th>\n",
+       "      <td>8089</td>\n",
+       "      <td>127.150463</td>\n",
+       "      <td>37.451212</td>\n",
+       "      <td>127.140592</td>\n",
+       "      <td>37.444779</td>\n",
+       "      <td>36375</td>\n",
+       "      <td>36932</td>\n",
+       "      <td>1702.0</td>\n",
+       "      <td>taxi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8089</th>\n",
+       "      <td>8090</td>\n",
+       "      <td>127.145136</td>\n",
+       "      <td>37.473315</td>\n",
+       "      <td>127.145273</td>\n",
+       "      <td>37.440262</td>\n",
+       "      <td>36154</td>\n",
+       "      <td>37049</td>\n",
+       "      <td>4957.0</td>\n",
+       "      <td>taxi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8090</th>\n",
+       "      <td>8091</td>\n",
+       "      <td>127.139815</td>\n",
+       "      <td>37.467473</td>\n",
+       "      <td>127.143171</td>\n",
+       "      <td>37.471658</td>\n",
+       "      <td>36589</td>\n",
+       "      <td>37219</td>\n",
+       "      <td>2179.0</td>\n",
+       "      <td>taxi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8091</th>\n",
+       "      <td>8092</td>\n",
+       "      <td>127.132068</td>\n",
+       "      <td>37.441041</td>\n",
+       "      <td>127.141741</td>\n",
+       "      <td>37.441216</td>\n",
+       "      <td>38033</td>\n",
+       "      <td>38415</td>\n",
+       "      <td>1362.0</td>\n",
+       "      <td>taxi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8092</th>\n",
+       "      <td>8093</td>\n",
+       "      <td>127.148697</td>\n",
+       "      <td>37.450409</td>\n",
+       "      <td>127.138696</td>\n",
+       "      <td>37.444512</td>\n",
+       "      <td>37977</td>\n",
+       "      <td>38651</td>\n",
+       "      <td>1664.0</td>\n",
+       "      <td>taxi</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8093 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      KEY1        출발_x       출발_y        도착_x       도착_y  승차_timestamp  \\\n",
+       "0        1  127.140050  37.443500  127.129830  37.440480         35116   \n",
+       "1        2  127.156721  37.445073  127.147540  37.440946         33180   \n",
+       "2        3  127.095050  37.411250  127.140220  37.443280         34378   \n",
+       "3        4  127.165930  37.460470  127.134370  37.441830         36324   \n",
+       "4        5  127.137600  37.447020  127.140940  37.473750         32360   \n",
+       "...    ...         ...        ...         ...        ...           ...   \n",
+       "8088  8089  127.150463  37.451212  127.140592  37.444779         36375   \n",
+       "8089  8090  127.145136  37.473315  127.145273  37.440262         36154   \n",
+       "8090  8091  127.139815  37.467473  127.143171  37.471658         36589   \n",
+       "8091  8092  127.132068  37.441041  127.141741  37.441216         38033   \n",
+       "8092  8093  127.148697  37.450409  127.138696  37.444512         37977   \n",
+       "\n",
+       "      하차_timestamp    이용거리     source  \n",
+       "0            35512   970.0  smartcard  \n",
+       "1            33511   800.0  smartcard  \n",
+       "2            35636  7248.0  smartcard  \n",
+       "3            37522  4431.0  smartcard  \n",
+       "4            33673  4068.0  smartcard  \n",
+       "...            ...     ...        ...  \n",
+       "8088         36932  1702.0       taxi  \n",
+       "8089         37049  4957.0       taxi  \n",
+       "8090         37219  2179.0       taxi  \n",
+       "8091         38415  1362.0       taxi  \n",
+       "8092         38651  1664.0       taxi  \n",
+       "\n",
+       "[8093 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "file_path = r\"/Users/banghyewon/Desktop/dynamic_wirye_drt/data/processed/240314_sujeong_merged_od.parquet\"\n",
     "\n",
     "df = pd.read_parquet(file_path)\n",
     "\n",
@@ -236,9 +458,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "wirye310",
+   "display_name": "base",
    "language": "python",
-   "name": "wirye310"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -250,7 +472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.19"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
